--- a/3차시_chatgpt/수업/style.css
+++ b/3차시_chatgpt/수업/style.css
@@ -63,7 +63,7 @@ body {
 
 #user-input {
     background-color: white;
-    color: #ffffff;
+    color: black;
     border: none;
     outline: none;
     padding: 10px 10px 10px 20px;
